support data request with long time span

--- a/Hinet.cfg
+++ b/Hinet.cfg
@@ -1,3 +1,9 @@
 [Account]
 User = xxxxxx
-Password = xxxxxxxxxx
+Password = xxxxxxxx
+
+[Cont]
+Net = 0101
+# Data format: Z, GZIP, ZIP, LZH
+Format = ZIP
+MaxSpan = 5
