remove configure for format

--- a/Hinet.cfg
+++ b/Hinet.cfg
@@ -4,6 +4,7 @@ Password = xxxxxxxx
 
 [Cont]
 Net = 0101
-# Data format: Z, GZIP, ZIP, LZH
-Format = ZIP
 MaxSpan = 5
+
+[Tools]
+catwin32 = catwin32
