--- a/Hinet.cfg
+++ b/Hinet.cfg
@@ -7,5 +7,7 @@ Net = 0101
 MaxSpan = 5
 
 [Tools]
+# 'catwin32' if it's in PATH, or absolute path of catwin32 binary file
 catwin32 = catwin32
+# download tool, choose from 'requests' or 'wget'
 downloader = wget
