default to use requests as download tool

--- a/Hinet.cfg
+++ b/Hinet.cfg
@@ -10,4 +10,4 @@ MaxSpan = 5
 # 'catwin32' if it's in PATH, or absolute path of catwin32 binary file
 catwin32 = catwin32
 # download tool, choose from 'requests' or 'wget'
-downloader = wget
+downloader = requests
