Move URLs to configure file

--- a/Hinet.cfg
+++ b/Hinet.cfg
@@ -1,6 +1,15 @@
+[URL]
+AUTH = https://hinetwww11.bosai.go.jp/auth
+CONT = %(AUTH)s/download/cont
+STATUS = %(CONT)s/cont_status.php
+SELECT = %(CONT)s/select_confirm.php
+STATION = %(CONT)s/select_info.php
+REQUEST = %(CONT)s/cont_request.php
+DOWNLOAD = %(CONT)s/cont_download.php
+
 [Account]
 User = xxxxxx
-Password = xxxxxxxx
+Password = xxxxxxxxxx
 
 [Cont]
 Net = 0101
