Retry one more time if request fails

--- a/Hinet.cfg
+++ b/Hinet.cfg
@@ -1,4 +1,5 @@
 [URL]
+# DO NOT MODIFY URLs
 AUTH = https://hinetwww11.bosai.go.jp/auth
 CONT = %(AUTH)s/download/cont
 STATUS = %(CONT)s/cont_status.php
@@ -8,9 +9,16 @@ REQUEST = %(CONT)s/cont_request.php
 DOWNLOAD = %(CONT)s/cont_download.php
 
 [Account]
-User = xxxxxx
-Password = xxxxxxxxxx
+User = xxxxxxx
+Password = xxxxxxxxxxx
 
 [Cont]
 Net = 0101
+# Max time span for each sub-requests
+# MaxSpan <= 12000 / Number_of_Channel
 MaxSpan = 5
+
+[Request]
+# waiting time for data preparation <= MaxSleepCount*SleepTime seconds
+MaxSleepCount = 100
+SleepTime = 2.0
