--- a/Hinet.cfg
+++ b/Hinet.cfg
@@ -1,16 +1,6 @@
-[URL]
-# DO NOT MODIFY URLs
-AUTH = https://hinetwww11.bosai.go.jp/auth
-CONT = %(AUTH)s/download/cont
-STATUS = %(CONT)s/cont_status.php
-SELECT = %(CONT)s/select_confirm.php
-STATION = %(CONT)s/select_info.php
-REQUEST = %(CONT)s/cont_request.php
-DOWNLOAD = %(CONT)s/cont_download.php
-
 [Account]
-User = xxxxxxx
-Password = xxxxxxxxxxx
+User = xxxxxx
+Password = xxxxxxxxx
 
 [Cont]
 Net = 0101
