--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,7 @@ install:
   - pip install guzzle_sphinx_theme
   - pip install codecov coverage pytest-cov
   # install win32tools
-  - sed -i "s/test_username/${HINET_USERNAME}/" .travis/install_win32tools.py
-  - sed -i "s/test_password/${HINET_PASSWORD}/" .travis/install_win32tools.py
-  - python .travis/install_win32tools.py
+  - python -c "from HinetPy import Client; Client('${HINET_USERNAME}', '${HINET_PASSWORD}')._get_win32tools()"
   - tar -xvf win32tools.tar.gz
   - cd win32tools && make -j && mkdir bin
   - mv catwin32.src/catwin32 win2sac.src/win2sac_32 bin/ && cd ..
