--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ branches:
   - /^feature-.*$/
 
 install:
-  - pip install .
   - pip install -r requirements.txt
   - pip install guzzle_sphinx_theme
   - pip install codecov coverage pytest-cov
+  # -e is important for coverage report
+  - pip install -e .
   # install win32tools
   - python -c "from HinetPy import Client; Client('${HINET_USERNAME}', '${HINET_PASSWORD}')._get_win32tools()"
   - tar -xvf win32tools.tar.gz
@@ -28,11 +29,11 @@ before_script:
   - sed -i "s/test_password/${HINET_PASSWORD}/" tests/test_*.py
 
 script:
-    - py.test -v --cov=HinetPy tests/
+  - py.test --cov-report term-missing --cov=HinetPy -vs tests/
+  - codecov
 
 after_success:
   - cd docs && make html && cd ..
-  - codecov
 
 deploy:
   provider: pages
