--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,7 @@ install:
   # -e is important for coverage report
   - pip install -e .[dev]
   # install win32tools
-  - python -c "from HinetPy import Client; Client('${HINET_USERNAME}', '${HINET_PASSWORD}')._get_win32tools()"
-  - tar -xvf win32tools.tar.gz
-  - cd win32tools && make -j && mkdir bin
-  - mv catwin32.src/catwin32 win2sac.src/win2sac_32 bin/ && cd ..
+  - bash ci/install-win32tools.sh
   - export PATH=${PATH}:${PWD}/win32tools/bin
 
 before_script:
