move docs build to makefile [skip tests]

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -22,3 +22,21 @@ help:
 translation:
 	make gettext
 	sphinx-intl update -p _build/gettext -l zh_CN
+
+docs:
+	@echo
+	@echo "Building Chinese version HTML files."
+	sphinx-intl build
+	make -e SPHINXOPTS="-D language='zh_CN'" html
+
+	@echo
+	@echo "Backup Chinese version HTML files."
+	mv _build/html _build/html_zh_CN
+
+	@echo
+	@echo "Building English version HTML files."
+	make html
+
+	@echo
+	@echo "Move Chinese version back."
+	mv _build/html_zh_CN _build/html/zh_CN
