simplify Makefile for docs [ci skip]

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -22,20 +22,12 @@ help:
 translation: gettext
 	sphinx-intl update -p _build/gettext -l zh_CN
 
-docs:
-	@echo
+html-zh_CN:
 	@echo "Building Chinese version HTML files."
 	sphinx-intl build
-	make -e SPHINXOPTS="-D language='zh_CN'" html
+	$(SPHINXBUILD) -b html -d $(BUILDDIR)/doctrees \
+		$(SPHINXOPTS) -D language='zh_CN' \
+		$(SOURCEDIR) $(BUILDDIR)/html/zh_CN
 
+docs: html html-zh_CN
 	@echo
-	@echo "Backup Chinese version HTML files."
-	mv _build/html _build/html_zh_CN
-
-	@echo
-	@echo "Building English version HTML files."
-	make html
-
-	@echo
-	@echo "Move Chinese version back."
-	mv _build/html_zh_CN _build/html/zh_CN
