--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ matrix:
       env:
         - BUILD_DOCS=true
         - MAKE_TESTS=true
+    - python: 3.8
+      env:
+        - BUILD_DOCS=false
+        - MAKE_TESTS=true
 
 branches:
   only:
