--- a/.travis.yml
+++ b/.travis.yml
@@ -4,26 +4,10 @@ dist: xenial
 
 matrix:
   include:
-    - python: 3.4
-      env:
-        - BUILD_DOCS=false
-        - MAKE_TESTS=true
-    - python: 3.5
-      env:
-        - BUILD_DOCS=false
-        - MAKE_TESTS=true
-    - python: 3.6
-      env:
-        - BUILD_DOCS=false
-        - MAKE_TESTS=true
     - python: 3.7
       env:
         - BUILD_DOCS=true
-        - MAKE_TESTS=true
-    - python: 3.8
-      env:
-        - BUILD_DOCS=false
-        - MAKE_TESTS=true
+        - MAKE_TESTS=false
 
 branches:
   only:
