Fix deploy-doc workflow and clean up travis settings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
+          pip install .  # install HinetPy
 
       - name: Build documentation
         run: make doc
