--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: HinetPy Tests
+name: CI
 
 on:
   push:
@@ -66,7 +66,7 @@ jobs:
 
 
   test:
-    name: ${{ matrix.os }} - Python ${{ matrix.python-version }}
+    name: Tests - ${{ matrix.os }} - Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 1
