Use versioneer to manage versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = HinetPy/_version.py
+versionfile_build = HinetPy/_version.py
+tag_prefix = ''
+
 [flake8]
 max-line-length = 88
+exclude = versioneer.py
