--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,8 +80,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
-        with:
-          fetch-depth: 0
+
+      # See https://github.com/warner/python-versioneer/issues/206
+      - name: Fetch all history for all tags and branches
+        run: git fetch --prune --unshallow
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
