--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: CI
 
 on:
@@ -18,10 +15,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.1.0
 
-      - name: Set up Python 3.7
+      - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
@@ -40,10 +37,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.1.0
 
-      - name: Set up Python 3.7
+      # See https://github.com/warner/python-versioneer/issues/206
+      - name: Fetch all history for all tags and branches
+        run: git fetch --prune --unshallow
+
+      - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
@@ -64,12 +65,11 @@ jobs:
           publish_branch: gh-pages
           publish_dir: ./docs/_build/html
 
-
   test:
     name: Tests - ${{ matrix.os }} - Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
-      max-parallel: 1
+      max-parallel: 1  # Hinet doesn't allow parallel data request
       fail-fast: false
       matrix:
         #python-version: [3.5, 3.6, 3.7, 3.8]
