--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ style = pep440
 versionfile_source = HinetPy/_version.py
 versionfile_build = HinetPy/_version.py
 tag_prefix = ''
+parentdir_prefix = HinetPy-
 
 [flake8]
 max-line-length = 88
