--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,9 +73,8 @@ jobs:
       fail-fast: false
       matrix:
         #python-version: [3.5, 3.6, 3.7, 3.8]
-        #os: [ubuntu-latest, macos-latest]
         python-version: [3.7]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - name: Checkout
