--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,8 @@ jobs:
       matrix:
         #python-version: [3.5, 3.6, 3.7, 3.8]
         python-version: [3.7]
-        os: [ubuntu-latest, macos-latest]
+        #os: [ubuntu-latest, macos-latest]
+        os: [windows-latest]
 
     steps:
       - name: Checkout
