Run tests in bash

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,7 @@ jobs:
 
       - name: Run tests
         run: make test
+        shell: bash
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v1
