--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,6 @@ jobs:
           cd win32tools; make; mkdir bin; mv catwin32.src/catwin32 win2sac.src/win2sac_32 bin/; cd ..
           # Add to PATH
           echo "::add-path::${{ github.workspace }}/win32tools/bin"
-        shell: bash
 
       - name: Set Hinet username and password
         run: |
@@ -117,10 +116,9 @@ jobs:
 
       - name: Run tests
         run: |
-          echo $PATH
-          ls ${{ github.workspace }}/win32tools/bin/*
-          make test
-        shell: bash
+          $Env:Path
+          Get-ChildItem $env:GITHUB_WORKSPACE\win32tools\bin
+          #make test
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v1
