--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,7 +115,7 @@ jobs:
           python -c "from HinetPy import Client; Client('${{ secrets.HINET_USERNAME }}', '${{ secrets.HINET_PASSWORD }}')._get_win32tools()"
           # Compile and install win32tools
           tar -xf win32tools.tar.gz && rm win32tools.tar.gz
-          cd win32tools; make; mkdir bin; mv catwin32.src/catwin32 win2sac.src/win2sac_32 bin/; cd ..
+          cd win32tools; make; mkdir bin; mv catwin32.src\catwin32 bin; mv win2sac.src\win2sac_32 bin; cd ..
           # Add to PATH
           echo "::add-path::${{ github.workspace }}/win32tools/bin"
         if: runner.os == 'Windows'
