--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
           tar -xf win32tools.tar.gz && rm win32tools.tar.gz
           cd win32tools; make; mkdir bin; mv catwin32.src\catwin32 bin; mv win2sac.src\win2sac_32 bin; cd ..
           # Add to PATH
-          echo "::add-path::${{ github.workspace }}\win32tools\bin"
+          echo "::add-path::${{ github.workspace }}\\win32tools\\bin"
         if: runner.os == 'Windows'
 
       - name: Set Hinet username and password
@@ -131,6 +131,8 @@ jobs:
           $Env:Path
           Get-ChildItem $env:GITHUB_WORKSPACE\win32tools\bin
           python -c "import shutil; print(shutil.which('python'))"
+          python -c "import shutil; print(shutil.which('win2sac_32'))"
+          python -c "import shutil; print(shutil.which('catwin32'))"
           python -c "import shutil; print(shutil.which('D:\a\HinetPy\HinetPy\win32tools\bin\win2sac_32'))"
           python -c "import shutil; print(shutil.which('D:\\a\\HinetPy\\HinetPy\\win32tools\\bin\catwin32'))"
           #make test
