--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,6 +137,7 @@ jobs:
           python -c "import shutil; print(shutil.which('catwin32'))"
           python -c "import shutil; print(shutil.which('D:\a\HinetPy\HinetPy\win32tools\bin\win2sac_32'))"
           python -c "import shutil; print(shutil.which('D:\\a\\HinetPy\\HinetPy\\win32tools\\bin\catwin32'))"
+          catwin32 -h
           #make test
 
       - name: Upload coverage reports
