--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,13 +131,14 @@ jobs:
           $Env:Path
           Get-ChildItem $env:GITHUB_WORKSPACE\win32tools\bin
           python -c "import shutil; print(shutil.which('python'))"
-           python -c "import shutil, os; print(os.environ['PATH']); print(shutil.which('catwin32'))"
-           python -c "import shutil, os; print(os.environ['PATH']); print(shutil.which('win2sac_32'))"
+          python -c "import shutil, os; print(os.environ['PATH']); print(shutil.which('catwin32'))"
+          python -c "import shutil, os; print(os.environ['PATH']); print(shutil.which('win2sac_32'))"
           python -c "import shutil; print(shutil.which('win2sac_32'))"
           python -c "import shutil; print(shutil.which('catwin32'))"
           python -c "import shutil; print(shutil.which('D:\a\HinetPy\HinetPy\win32tools\bin\win2sac_32'))"
           python -c "import shutil; print(shutil.which('D:\\a\\HinetPy\\HinetPy\\win32tools\\bin\catwin32'))"
           catwin32 -h
+          D:\\a\\HinetPy\\HinetPy\\win32tools\\bin\\catwin32 -h
           #make test
 
       - name: Upload coverage reports
