--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.1.0
+        uses: actions/checkout@v2.3.3
 
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
@@ -35,7 +35,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.1.0
+        uses: actions/checkout@v2.3.3
 
       # See https://github.com/warner/python-versioneer/issues/206
       - name: Fetch all history for all tags and branches
@@ -77,8 +77,13 @@ jobs:
         os: [ubuntu-latest, macos-latest]
 
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.5.0
+        with:
+          access_token: ${{ github.token }}
+
       - name: Checkout
-        uses: actions/checkout@v2.1.0
+        uses: actions/checkout@v2.3.3
 
       # See https://github.com/warner/python-versioneer/issues/206
       - name: Fetch all history for all tags and branches
