Use sphinx_rtd_theme theme

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,10 +1,10 @@
 # Minimal makefile for Sphinx documentation
 #
 
-# You can set these variables from the command line.
-SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build
-SPHINXPROJ    = HinetPy
+# You can set these variables from the command line, and also
+# from the environment for the first two.
+SPHINXOPTS    ?=
+SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = .
 BUILDDIR      = _build
 
@@ -30,4 +30,3 @@ html-zh_CN:
 		$(SOURCEDIR) $(BUILDDIR)/html/zh_CN
 
 docs: html html-zh_CN
-	@echo
