Exclude files for black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,22 @@
 [tool.black]
 line-length = 88
-exclude = "HinetPy/_version.py"
+exclude = '''
+(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  # The following are specific to HinetPy
+  | versioneer.py
+  | HinetPy/_version.py
+)
+'''
 
 [tool.coverage.run]
 omit = ["HinetPy/_version.py"]
