--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   test:
-    name: Tests - ${{ matrix.os }} - Python ${{ matrix.python-version }}
+    name: ${{ matrix.os }} - Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 1  # Hinet doesn't allow parallel data request
