--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,8 +21,9 @@ jobs:
       fail-fast: false
       matrix:
         #python-version: [3.5, 3.6, 3.7, 3.8]
-        python-version: [3.7]
-        os: [ubuntu-latest, macos-latest]
+        #os: [ubuntu-latest, macos-latest]
+        python-version: [3.9]
+        os: [macos-latest]
 
     steps:
       - name: Cancel Previous Runs
