--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,8 @@ jobs:
       max-parallel: 1  # Hinet doesn't allow parallel data request
       fail-fast: false
       matrix:
-        #python-version: [3.5, 3.6, 3.7, 3.8]
-        #os: [ubuntu-latest, macos-latest]
-        python-version: [3.6, 3.9]
-        os: [macos-latest]
+        os: [ubuntu-latest, macos-latest]
+        python-version: [3.6, 3.10]
 
     steps:
       - name: Cancel Previous Runs
