--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,10 +31,9 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v2.4.0
-
-      # See https://github.com/warner/python-versioneer/issues/206
-      - name: Fetch all history for all tags and branches
-        run: git fetch --prune --unshallow
+        with:
+          # fecth all history so that setuptools-scm works
+        fetch-depth: 0
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2.3.1
