--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,9 +25,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          pip install black blackdoc flake8 isort
 
       - name: Check code style
         run: make check
