--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -23,12 +23,11 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install setuptools wheel
 
     - name: Build and publish
       run: |
-        make package
+        python setup.py sdist bdist_wheel
         ls -lh dist/
 
     - name: Publish to PyPI
