--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,12 @@ omit = []
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--cov=HinetPy --cov-report=term-missing --cov-report=xml --verbose"
+addopts = "--verbose --doctest-modules --cov=HinetPy --cov-report=term-missing --cov-report=xml"
 
 [tool.isort]
 profile = "black"
 skip_gitignore = true
 known_third_party = "HinetPy"
+
+[tool.pylint.design]
+max-args = 10
