Remove --doctest-modules for pytest because doctests need dataset to work

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ omit = []
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--verbose --doctest-modules --cov=HinetPy --cov-report=term-missing --cov-report=xml"
+addopts = "--verbose --cov=HinetPy --cov-report=term-missing --cov-report=xml"
 
 [tool.isort]
 profile = "black"
