--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,8 +20,8 @@ jobs:
       matrix:
         #python-version: [3.5, 3.6, 3.7, 3.8]
         #os: [ubuntu-latest, macos-latest]
-        python-version: [3.6, 3.9]
-        os: [macos-latest]
+        python-version: ["3.6", "3.10"]
+        os: [macos-latest, ubuntu-latest]
 
     steps:
       - name: Cancel Previous Runs
