--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install pytest>=6.0 pytest-cov coverage[toml] codecov
+          pip install pytest>=6.0 pytest-cov coverage[toml] codecov setuptools
           python setup.py sdist --formats=zip
           pip install dist/*
 
