--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       max-parallel: 1  # Hinet doesn't allow parallel data request
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.10"]
+        python-version: ["3.7", "3.12"]
         os: [macos-latest, ubuntu-latest]
 
     steps:
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install pytest>=6.0 pytest-cov coverage[toml] codecov
+          pip install pytest>=6.0 pytest-cov coverage[toml] codecov setuptools
           python setup.py sdist --formats=zip
           pip install dist/*
 
