--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Build and publish
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build
         ls -lh dist/
 
     - name: Publish to PyPI
