--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,8 +40,8 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install pytest>=6.0 pytest-cov coverage[toml] codecov setuptools
-          python setup.py sdist --formats=zip
-          pip install dist/*
+          python -m build --sdist
+          python -m pip install dist/*
 
       - name: Install win32tools
         run: |
