--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -21,12 +21,9 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
+    - name: Build
       run: |
-        pip install setuptools wheel
-
-    - name: Build and publish
-      run: |
+        python -m install build
         python -m build
         ls -lh dist/
 
