--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip install sphinx sphinx-intl sphinx_rtd_theme
+          python -m pip install -r requirements.txt
+          python -m pip install build sphinx sphinx-intl sphinx_rtd_theme
           python -m build --sdist
           python -m install dist/*
 
