--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip install pytest>=6.0 pytest-cov coverage[toml] codecov setuptools
+          python -m pip install -r requirements.txt
+          python -m pip install build pytest>=6.0 pytest-cov coverage[toml] codecov
           python -m build --sdist
           python -m pip install dist/*
 
