--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,6 +3,7 @@ name: Tests
 on:
   push:
     branches: [main]
+    paths:
       - 'HinetPy/**'
       - 'tests/**'
       - '.github/workflows/tests.yml'
