--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,10 +37,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip install sphinx sphinx-intl sphinx_rtd_theme
+          python -m pip install -r requirements.txt
+          python -m pip install sphinx sphinx-intl sphinx_rtd_theme
           python setup.py sdist --formats=zip
-          pip install dist/*
+          python -m pip install dist/*
 
       - name: Build documentation
         run: make doc
