--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,10 +42,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip install pytest>=6.0 pytest-cov coverage[toml] codecov setuptools
+          python -m pip install -r requirements.txt
+          python -m pip install pytest>=6.0 pytest-cov coverage[toml] codecov setuptools
           python setup.py sdist --formats=zip
-          pip install dist/*
+          python -m pip install dist/*
 
       - name: Install win32tools
         run: |
