--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
-          python -m pip install sphinx sphinx-intl sphinx_rtd_theme
-          python setup.py sdist --formats=zip
+          python -m pip install build sphinx sphinx-intl sphinx_rtd_theme
+          python -m build --sdist
           python -m pip install dist/*
 
       - name: Build documentation
