--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
       max-parallel: 1  # Hinet doesn't allow parallel data request
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.12"]
+        python-version: ["3.8", "3.12"]
         os: [macos-latest, ubuntu-latest]
 
     steps:
@@ -43,8 +43,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
-          python -m pip install pytest>=6.0 pytest-cov coverage[toml] codecov setuptools
-          python setup.py sdist --formats=zip
+          python -m pip install build pytest>=6.0 pytest-cov coverage[toml] codecov
+          python -m build --sdist
           python -m pip install dist/*
 
       - name: Install win32tools
