--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
-          python -m pip install black blackdoc flake8 isort
+          python -m pip install ruff
 
       - name: Check code style
         run: make check
