--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
-          python -m pip install build pytest>=6.0 pytest-cov coverage[toml] codecov
+          python -m pip install build pytest pytest-cov coverage[toml] codecov
           python -m build --sdist
           python -m pip install dist/*
 
