--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,13 +1,10 @@
 # for testing
-pytest>=6.0
+pytest
 pytest-cov
 coverage[toml]
 codecov
 # for code style
-black
-blackdoc
-flake8
-isort
+ruff
 # for documentation
 sphinx
 sphinx-intl
