Add pytest settings to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,3 +125,7 @@ convention = "numpy"
 
 [tool.ruff.lint.pylint]
 max-args=10
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "--verbose --cov=HinetPy --cov-report=term-missing --cov-report=xml"
