--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Physics",
     "Topic :: Utilities",
 ]
-dependencies = ["requests"]
+dependencies = ["packaging", "requests"]
 dynamic = ["version"]
 
 [project.urls]
