--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,8 @@ jobs:
       max-parallel: 1  # Hinet doesn't allow parallel data request
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        #python-version: ["3.8", "3.12"]
         os: [macos-latest, ubuntu-latest]
 
     steps:
