Fix a typo in the pypi-publish.yml workflow

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Build
       run: |
-        python -m install build
+        python -m pip install build
         python -m build
         ls -lh dist/
 
