Add certifi and urllib3 as dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Physics",
     "Topic :: Utilities",
 ]
-dependencies = ["packaging", "requests"]
+dependencies = ["certifi", "packaging", "requests", "urllib3"]
 dynamic = ["version"]
 
 [project.urls]
