--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           python -m pip install -r requirements.txt
           python -m pip install --upgrade certifi
-          python -m pip install build pytest pytest-cov coverage[toml] codecov
+          python -m pip install build pytest pytest-cov
           python -m build --sdist
           python -m pip install dist/*
 
