CI: Enable workflow_dispatch event in check and docs workflows

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,7 @@ on:
       - 'HinetPy/*.py'
       - 'docs/**'
       - 'README.rst'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
